# CargoBay

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md
.cargo/: config.toml
.codebuddy/: project.yaml  settings.local.json
.codebuddy/hooks/: .pre-commit.spec
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: build-dmg.yml  ci.yml  pages.yml  provider-canary.yml  release.yml
crates/cargobay-cli/: Cargo.toml
crates/cargobay-cli/src/: main.rs
crates/cargobay-core/: Cargo.toml  build.rs
crates/cargobay-core/benches/: startup.rs
crates/cargobay-core/src/: hypervisor.rs  k3s.rs  lib.rs  linux.rs  logging.rs  macos.rs  store.rs  vm.rs  windows.rs
crates/cargobay-daemon/: Cargo.toml
crates/cargobay-daemon/src/: main.rs  service.rs
crates/cargobay-daemon/tests/: grpc_smoke.rs
crates/cargobay-gui/: package-lock.json  package.json
crates/cargobay-gui/src/: App.css  App.tsx  icons.tsx  types.ts
crates/cargobay-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/cargobay-vz/: Cargo.toml  build.rs
crates/cargobay-vz/bridge/: VZBridge.h  VZBridge.swift
crates/cargobay-vz/src/: ffi.rs  main.rs
crates/cratebay-cli/: Cargo.toml
crates/cratebay-cli/src/: docker.rs  image.rs  k3s.rs  lib.rs  main.rs  runtime.rs  vm.rs  volume.rs
crates/cratebay-cli/src/commands/: container.rs  image.rs  mcp.rs  mod.rs  runtime.rs  system.rs
crates/cratebay-core/: Cargo.toml
crates/cratebay-core/benches/: startup_bench.rs  storage_bench.rs
crates/cratebay-core/migrations/: 001_initial_schema.sql
crates/cratebay-core/src/: audit.rs  container.rs  docker.rs  docker_auth.rs  engine.rs  error.rs  fsutil.rs  images.rs  k3s.rs  lib.rs  llm_proxy.rs  macos.rs  models.rs  portfwd.rs  proxy.rs  runtime.rs  sandbox.rs  storage.rs  store.rs  validation.rs
crates/cratebay-core/src/engine/: podman.rs
crates/cratebay-core/src/mcp/: config.rs  jsonrpc.rs  manager.rs  mod.rs  transport.rs
crates/cratebay-core/src/runtime/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/cratebay-core/tests/: audit_integration.rs  docker_integration.rs  llm_proxy_integration.rs  storage_integration.rs
crates/cratebay-daemon/src/: main.rs
crates/cratebay-guest-agent/: Cargo.toml
crates/cratebay-guest-agent/src/: main.rs
crates/cratebay-gui/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
crates/cratebay-gui/e2e/: chat-flow.spec.ts  containers-list.spec.ts  example.spec.ts  mcp-servers.spec.ts  navigation.spec.ts  runtime-flows.spec.ts  settings.spec.ts  tauri-mock.ts
crates/cratebay-gui/pencil/: dashboard.pen
crates/cratebay-gui/scripts/: prepare-runtime-assets.mjs
crates/cratebay-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/cratebay-gui/src-tauri/bundle-images/: README.md
crates/cratebay-gui/src-tauri/capabilities/: default.json
crates/cratebay-gui/src-tauri/icons/: icon.icns
crates/cratebay-gui/src-tauri/runtime-images/: README.md
crates/cratebay-gui/src-tauri/runtime-images/cratebay-runtime-aarch64/: initramfs
crates/cratebay-gui/src-tauri/runtime-images/cratebay-runtime-x86_64/: initramfs  vmlinuz
crates/cratebay-gui/src-tauri/runtime-linux/: README.md
crates/cratebay-gui/src-tauri/runtime-wsl/: README.md
crates/cratebay-gui/src-tauri/runtime-wsl/cratebay-runtime-wsl-aarch64/: rootfs.tar
crates/cratebay-gui/src-tauri/runtime-wsl/cratebay-runtime-wsl-x86_64/: rootfs.tar
crates/cratebay-gui/src-tauri/src/: ai.rs  docker.rs  events.rs  kubernetes.rs  lib.rs  main.rs  sandbox.rs  state.rs  tray.rs  update.rs  vm.rs
crates/cratebay-gui/src-tauri/src/commands/: container.rs  llm.rs  mcp.rs  mod.rs  sandbox.rs  storage.rs  system.rs
crates/cratebay-gui/src-tauri/src/sandbox/: audit.rs  error.rs  exec.rs  lifecycle.rs  policy.rs
crates/cratebay-gui/src-tauri/tests/: desktop_smoke.rs
crates/cratebay-mcp/: Cargo.toml
crates/cratebay-mcp/src/: audit.rs  error.rs  main.rs  protocol.rs  sandbox.rs  security.rs  templates.rs  tools.rs
crates/cratebay-vz/: Cargo.toml  build.rs
crates/cratebay-vz/bridge/: VZBridge.h  VZBridge.swift
crates/cratebay-vz/src/: ffi.rs  main.rs
crates/libreorb-cli/: Cargo.toml
crates/libreorb-cli/src/: main.rs
crates/libreorb-core/: Cargo.toml  build.rs
crates/libreorb-daemon/: Cargo.toml
crates/libreorb-gui/: index.html  package-lock.json  package.json
docs/: AI_SKILLS.md  ARCHITECTURE.en.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  MCP_SERVER.md  MCP_SERVER.zh.md  PROVIDER_CANARY.md  PROVIDER_CANARY.zh.md  README.md  RELEASE_NOTES_2026-03-08.md  RELEASE_SMOKE_CHECKLIST.md  ROADMAP.md  RUNTIME.md  RUNTIME.zh.md  TAURI_MCP_AUTOMATION.md  TUTORIAL.md  TUTORIAL.zh.md  VALIDATION_MATRIX.md  chatpage-v1-plan.md  getting-started.md  progress.md  spec-consistency-checklist.md
docs/prompts/: platform-test-pre-commit.md
docs/references/: glossary.md  tech-decisions.md
docs/specs/: agent-spec.md  api-spec.md  architecture.md  backend-spec.md  database-spec.md  frontend-spec.md  mcp-spec.md  runtime-spec.md  testing-spec.md
docs/testing/: socket-fix-verification-matrix.md
docs/workflow/: agent-team-workflow.md  dev-workflow.md  knowledge-base.md
images/: node.Dockerfile  python.Dockerfile  rust.Dockerfile  ubuntu.Dockerfile
proto/: cargobay.proto  libreorb.proto
scripts/: bench-perf.sh  build-bundle-images.sh  build-release-macos.sh  build-release-windows.sh  build-runtime-assets-alpine.sh  build-runtime-assets-linux.sh  build-runtime-assets-wsl.sh  ci-local.sh  docker-runtime-smoke.sh  e2e-test-mcp.sh  fetch-runtime-assets.sh  fetch-wsl-runtime-assets.sh  install-local-macos-app.sh  install-zig.sh  macos-entitlements.plist  mcp-fixture-loop.sh  prepare-tauri-external-bins.sh  release-readiness.sh  run-desktop-e2e-linux.sh  runtime-smoke-cli-only.sh  setup-ai.sh  setup-dev.sh  tauri-mcp-app.sh  verify-release-artifacts.sh
website/: index.html  script.js  style.css
(+161 files in other folders)
