[workspace]
resolver = "2"
members = [
    "crates/cratebay-core",
    "crates/cratebay-gui/src-tauri",
    "crates/cratebay-cli",
    "crates/cratebay-mcp",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/nicepkg/CrateBay"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Docker
bollard = "0.18"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming utilities
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async trait (object-safe async fn in traits)
async-trait = "0.1"

# Home directory detection
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
# specta-typescript pulled in via tauri-specta's "typescript" feature

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
