[package]
name = "cratebay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CrateBay CLI — command-line interface for container and workflow management"

[[bin]]
name = "cratebay"
path = "src/main.rs"

[dependencies]
cratebay-core = { path = "../cratebay-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
bollard = { workspace = true }
