[package]
name = "cratebay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CrateBay shared library — business logic, storage, runtime management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bollard = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false
