[package]
name = "cratebay-guest-agent"
version = "0.8.0"
edition = "2021"
rust-version = "1.77.2"
description = "Guest-side agent for CrateBay Runtime (vsock <-> docker.sock proxy)"

[[bin]]
name = "cratebay-guest-agent"
path = "src/main.rs"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["io-util", "net", "rt"] }
