[package]
name = "cratebay-guest-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Guest-side agent for CrateBay Runtime (vsock <-> docker.sock proxy)"

[[bin]]
name = "cratebay-guest-agent"
path = "src/main.rs"

[dependencies]
libc.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt"] }
