[package]
name = "cratebay-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CrateBay MCP Server — exposes container and tool operations via Model Context Protocol"

[[bin]]
name = "cratebay-mcp"
path = "src/main.rs"

[dependencies]
cratebay-core = { path = "../cratebay-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bollard = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"
tar = "0.4"
futures-util = { workspace = true }
