[package]
name = "cratebay-vz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Virtualization.framework bridge for CrateBay (macOS VM execution)"

[dependencies]
cratebay-core = { path = "../cratebay-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt"] }
