[package]
name = "cratebay-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CrateBay desktop application — Tauri v2 backend"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
cratebay-core = { path = "../../cratebay-core" }
tauri = { workspace = true, features = [] }
tauri-specta = { workspace = true }
specta = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
